fixed ui aligning issues for macOS 10.12

--- a/modules/components/src/components/skeuomorph-slider/skeuomorph-slider.component.scss
+++ b/modules/components/src/components/skeuomorph-slider/skeuomorph-slider.component.scss
@@ -21,6 +21,7 @@
 }
 
 .groove {
+  flex: 1 1 0%;
   height: 100%;
   width: 7px;
   margin: 8px 0;
